"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-10-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-23:
	  Debugging fixes: be able to partially dump collection before
		its type has been completely resolved.  
	  Next: split footprint member of unroll_context to be able to
		chain the contexts without instantiation conflict.  


2006-10-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-22:
	  New switch SEQUENTIAL_SCOPE_INCLUDES_FORMALS -> 0:
		Defined to zero to separate formal instantiations out.
		Punted removing port formals instantiations for now.  
	  Cleaned out PLACEHOLDERS_OWN_INSTANTIATIONS use (abandoned).  
	  Batch of unroll-expect tests updated in parser/{namespace,param}.
		Still some regressions to fix.  


2006-10-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-21:
	  Switched over all instance-management pointers to reference-count.
	  Intent: remove template and port formal instantiation statements 
		from sequential-scopes, only using in placeholders.  
	  Targeting one remaining regression in parser/basic.
	  Next: don't add template/port formal statements to seq.-scope.


2006-10-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-20-merged-module-06:
	  Merged revisions from -module child branch.
	  Summary: module has been defined to use process_definition's 
		facilities for more consistent unrolling implementation.
		Haven't handled module 'create' phase yet.  
	  Next: revise instantiations of template and port formals
		to avoid double instantiations, i.e. ports are implicitly
		unrolled before body sequential instance management.  


2006-09-29	David Fang		<fangism@users.sourceforge.net>
