@@ -2,7 +2,7 @@
 	\file "Object/ref/simple_meta_value_reference.tcc"
 	Class method definitions for semantic expression.  
 	This file was reincarnated from "Object/art_object_value_reference.tcc".
- 	$Id: simple_meta_value_reference.tcc,v 1.22.4.7 2006/09/11 22:31:10 fang Exp $
+ 	$Id: simple_meta_value_reference.tcc,v 1.22.4.7.6.1 2006/10/03 21:58:42 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_REF_SIMPLE_META_VALUE_REFERENCE_TCC__
@@ -330,7 +330,8 @@ SIMPLE_META_VALUE_REFERENCE_CLASS::must_be_equivalent(
 	Now checks unroll context to see if the referenced
 	value collection belongs to a complete type (definition) scope.  
 	\return good if resolution succeeds.
-	NOTE: loop induction variables (pint) do not exist in footprint!
+	NOTE: loop induction variables (pint) do not exist in footprint! (yet)
+		but NOW they will...
  */
 SIMPLE_META_VALUE_REFERENCE_TEMPLATE_SIGNATURE
 good_bool
@@ -347,6 +348,11 @@ SIMPLE_META_VALUE_REFERENCE_CLASS::unroll_resolve_value(
 		// then our work is done, 
 		// i has already been set as a loop variable
 		return good_bool(true);
+	}
+	if (!_v.second) {
+		cerr << "Failed to resolve value reference: ";
+		this->dump(cerr, expr_dump_context::default_value) << endl;
+		return good_bool(false);
 	}
 	const value_collection_type& _vals(*_v.second);
 
