@@ -1,0 +1,4 @@
+ERROR: in unroll_resolve-ing simple_meta_value_reference, uninitialized value.
+ERROR: failed to resolve source values of pint-val-ref ::N in pint assignment.
+Error encountered during module::unroll.
+ERROR in unrolling.  Aborting.
